[gd_scene load_steps=8 format=2]

[ext_resource path="res://Reward/RewardDomino.gd" type="Script" id=1]
[ext_resource path="res://Domino/TextBoxTheme.tres" type="Theme" id=2]
[ext_resource path="res://Domino/DominoBackground.png" type="Texture" id=3]
[ext_resource path="res://Fonts/RegularWhite.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Fonts/MicroWhite.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Domino/EnergyCircle.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "reward_fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("DisplayNode:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 0 ) ]
}

[node name="Node2D" type="Container"]
margin_right = 200.0
margin_bottom = 180.0
rect_min_size = Vector2( 200, 266 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 200.0
margin_bottom = 266.0
color = Color( 0.184314, 0.184314, 0.184314, 1 )

[node name="DisplayNode" type="Node2D" parent="."]
position = Vector2( 0, 4 )

[node name="ItemName" type="Label" parent="DisplayNode"]
margin_top = -2.0
margin_right = 200.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 4 )
text = "Domino Name"
align = 1

[node name="Node2" type="Node2D" parent="DisplayNode"]
position = Vector2( 84, 36 )

[node name="EquipmentTexture" type="TextureButton" parent="DisplayNode/Node2"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="Node" type="Node2D" parent="DisplayNode"]
position = Vector2( 52, 22 )

[node name="TextureRect" type="TextureButton" parent="DisplayNode/Node"]
margin_right = 96.0
margin_bottom = 72.0
rect_min_size = Vector2( 96, 72 )
texture_normal = ExtResource( 3 )

[node name="LeftNumber" type="TextureRect" parent="DisplayNode/Node"]
margin_right = 48.0
margin_bottom = 72.0
mouse_filter = 2

[node name="RightNumber" type="TextureRect" parent="DisplayNode/Node"]
margin_left = 46.0
margin_right = 94.0
margin_bottom = 72.0
mouse_filter = 2

[node name="ActionPointCircle" type="TextureRect" parent="DisplayNode/Node"]
anchor_right = 1.0
margin_left = 78.0
margin_top = 50.0
margin_right = 104.0
margin_bottom = 74.0
texture = ExtResource( 6 )

[node name="ActionPointLabel" type="Label" parent="DisplayNode/Node"]
margin_left = 88.0
margin_top = 55.0
margin_right = 96.0
margin_bottom = 70.0
theme = ExtResource( 2 )
text = "3"

[node name="Description" type="RichTextLabel" parent="DisplayNode"]
margin_left = 4.0
margin_top = 98.0
margin_right = 196.0
margin_bottom = 260.0
rect_min_size = Vector2( 180, 162 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "Description"
text = "Description"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/reward_fade_out = SubResource( 1 )

[connection signal="pressed" from="DisplayNode/Node2/EquipmentTexture" to="." method="_on_EquipmentTexture_pressed"]
[connection signal="pressed" from="DisplayNode/Node/TextureRect" to="." method="_on_TextureRect_pressed"]
